--- a/Train_densenet121.ipynb
+++ b/Train_densenet121.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "mount_file_id": "1pbuuG6xZjw8FPRGFRiLxkX-6Qo-QUn5u",
-      "authorship_tag": "ABX9TyM1sYEeCl2uu39efbznGqHJ",
+      "authorship_tag": "ABX9TyO+WbEhvWhCM74x3a4KaBj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -799,23 +799,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qSeE2e8eigdm",
-        "outputId": "82f559ab-fbec-4d59-d21b-1d71adc9526d"
+        "outputId": "048452b6-f290-478a-e15d-2c2c43bcfb4c"
       },
       "source": [
-        "model.save(join(path, \"dense_model\"))"
+        "model.save(join(\"/content/drive/MyDrive\", \"dense_model\"))"
       ],
-      "execution_count": 48,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
-            "INFO:tensorflow:Assets written to: /content/dense_model/assets\n"
+            "INFO:tensorflow:Assets written to: /content/drive/MyDrive/dense_model/assets\n"
           ],
           "name": "stdout"
         }
@@ -888,7 +882,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "toSy8D6kwZme"
+        "id": "Uc-xJsPt0Ex9"
       },
       "source": [
         ""
